--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h1{
     margin-bottom: 2vh;
 }
 
-main{
+/* main{
     background-color: #191919bf;
     width: 820px;
     display: flex;
@@ -102,4 +102,4 @@ section{
     width: 480px;
     height: 320px;
     filter: blur(2px);
-}
+} */
