--- a/style.css
+++ b/style.css
@@ -65,24 +65,33 @@ h1{
     margin-bottom: 2vh;
 }
 
-/* main{
-    background-color: #191919bf;
-    width: 820px;
+main{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
-nav{
+.centro{
+    background-color: #191919bf;
+    width: 840px;
+    height: 68vh;
+}
+
+header{
+    padding-top: 30px;
     display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .talheres{
     width: 104px;
+    height: 104px;
 }
 
 p{
     color: white;
+    font-size: 36px;
+    
 }
 
 section{
@@ -91,15 +100,35 @@ section{
 
 .section1{
     background-color: white;
-    width: 860px;
-    height: 320px;
-    
+    width: 620px;
+    height: 32vh;
 }
 
 .section2{
-    background-image: url(./img/Panquecas.png);
+    background-image: url(img/Panquecas.png);
     background-size: cover;
-    width: 480px;
-    height: 320px;
+    width: 540px;
+    height: 32vh;
+    border: none;
     filter: blur(2px);
-} */
+}
+
+.perfil{
+    position: absolute;
+    width: 300px;
+    height: 60px;
+    top: 50px;
+    right: 0px;
+    background-color: #FFB800;
+    border: none;
+    padding: 10px 20px;
+}
+
+.explore{
+    background-color: #FFB800;
+    position: absolute;
+    width: 280px;
+    height: 80px;
+    top: 490px;
+    left: 800px;
+}
